--- a/vue/public/index.ejs
+++ b/vue/public/index.ejs
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="">
   <head>
@@ -5,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>xiaomi</title>
+    <title></title>
   </head>
   <body>
     <noscript>
